parser.output
Terminals unused in grammar

    U_BEGIN
    U_END
    SMALL_BEGIN
    SMALL_END
    CODE_BEGIN
    CODE_END
    LANGBRACKET
    EQUAL
    WHITESPACE


Grammar

    0 $accept: start $end

    1 start: preabmle start
    2      | html

    3 preabmle: TEXT

    4 html: HTML_BEGIN head HTML_END

    5 head: HEAD_BEGIN title HEAD_END body

    6 title: TITLE_BEGIN titleContent TITLE_END

    7 titleContent: textContent

    8 body: BODY_BEGIN bodyContent BODY_END

    9 textContent: ε
   10            | textContent text

   11 text: TEXT
   12     | SPACE
   13     | NEWLINE

   14 bodyContent: semanticTags bodyContent
   15            | semanticTags

   16 semanticTags: HEADER_BEGIN bodyContent HEADER_END
   17             | NAV_BEGIN bodyContent NAV_END
   18             | SECTION_BEGIN bodyContent SECTION_END
   19             | ARTICLE_BEGIN bodyContent ARTICLE_END
   20             | ASIDE_BEGIN bodyContent ASIDE_END
   21             | FOOTER_BEGIN bodyContent FOOTER_END
   22             | H1_BEGIN textTags H1_END
   23             | H2_BEGIN textTags H2_END
   24             | H3_BEGIN textTags H3_END
   25             | H4_BEGIN textTags H4_END
   26             | H5_BEGIN textTags H5_END
   27             | PARA_BEGIN textTags PARA_END
   28             | STRONG_BEGIN textTags STRONG_END
   29             | EM_BEGIN textTags EM_END
   30             | BLOCKQUOTE_BEGIN textTags BLOCKQUOTE_END
   31             | PRE_BEGIN pretag textTags PRE_END
   32             | list
   33             | A_BEGIN anchor A_END
   34             | IMG_BEGIN image RANGBRACKET
   35             | TEXT
   36             | SPACE
   37             | NEWLINE

   38 textTags: textTag textTags
   39         | textTag

   40 textTag: PARA_BEGIN textTags PARA_END
   41        | STRONG_BEGIN textTags STRONG_END
   42        | EM_BEGIN textTags EM_END
   43        | BLOCKQUOTE_BEGIN textTags BLOCKQUOTE_END
   44        | PRE_BEGIN pretag textTags PRE_END
   45        | list
   46        | A_BEGIN anchor A_END
   47        | IMG_BEGIN image RANGBRACKET
   48        | TEXT
   49        | SPACE
   50        | NEWLINE

   51 pretag: ε

   52 list: OL_BEGIN listElements OL_END
   53     | UL_BEGIN listElements UL_END

   54 listElements: listElements LI_BEGIN bodyContent LI_END
   55             | LI_BEGIN bodyContent LI_END

   56 anchor: HREF textContent DOUBLEINVERTEDCOMMA RANGBRACKET bodyContent

   57 image: imageAttributes DOUBLEINVERTEDCOMMA image
   58      | ε

   59 imageAttributes: SRC textContent
   60                | ALT textContent


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    HTML_BEGIN (258) 4
    HTML_END (259) 4
    HEAD_BEGIN (260) 5
    HEAD_END (261) 5
    TITLE_BEGIN (262) 6
    TITLE_END (263) 6
    BODY_BEGIN (264) 8
    BODY_END (265) 8
    NAV_BEGIN (266) 17
    NAV_END (267) 17
    UL_BEGIN (268) 53
    UL_END (269) 53
    LI_BEGIN (270) 54 55
    LI_END (271) 54 55
    HEADER_BEGIN (272) 16
    HEADER_END (273) 16
    H1_BEGIN (274) 22
    H1_END (275) 22
    H2_BEGIN (276) 23
    H2_END (277) 23
    H3_BEGIN (278) 24
    H3_END (279) 24
    H4_BEGIN (280) 25
    H4_END (281) 25
    H5_BEGIN (282) 26
    H5_END (283) 26
    PARA_BEGIN (284) 27 40
    PARA_END (285) 27 40
    SECTION_BEGIN (286) 18
    SECTION_END (287) 18
    ARTICLE_BEGIN (288) 19
    ARTICLE_END (289) 19
    ASIDE_BEGIN (290) 20
    ASIDE_END (291) 20
    FOOTER_BEGIN (292) 21
    FOOTER_END (293) 21
    A_BEGIN (294) 33 46
    A_END (295) 33 46
    STRONG_BEGIN (296) 28 41
    STRONG_END (297) 28 41
    EM_BEGIN (298) 29 42
    EM_END (299) 29 42
    U_BEGIN (300)
    U_END (301)
    SMALL_BEGIN (302)
    SMALL_END (303)
    BLOCKQUOTE_BEGIN (304) 30 43
    BLOCKQUOTE_END (305) 30 43
    PRE_BEGIN (306) 31 44
    PRE_END (307) 31 44
    CODE_BEGIN (308)
    CODE_END (309)
    OL_BEGIN (310) 52
    OL_END (311) 52
    TEXT <str> (312) 3 11 35 48
    SPACE <str> (313) 12 36 49
    NEWLINE <str> (314) 13 37 50
    HREF (315) 56
    IMG_BEGIN (316) 34 47
    SRC (317) 59
    ALT (318) 60
    LANGBRACKET (319)
    RANGBRACKET (320) 34 47 56
    EQUAL (321)
    DOUBLEINVERTEDCOMMA (322) 56 57
    WHITESPACE (323)


Nonterminals, with rules where they appear

    $accept (69)
        on left: 0
    start <node> (70)
        on left: 1 2
        on right: 0 1
    preabmle (71)
        on left: 3
        on right: 1
    html <node> (72)
        on left: 4
        on right: 2
    head <node> (73)
        on left: 5
        on right: 4
    title <node> (74)
        on left: 6
        on right: 5
    titleContent <node> (75)
        on left: 7
        on right: 6
    body <node> (76)
        on left: 8
        on right: 5
    textContent <node> (77)
        on left: 9 10
        on right: 7 10 56 59 60
    text <node> (78)
        on left: 11 12 13
        on right: 10
    bodyContent <node> (79)
        on left: 14 15
        on right: 8 14 16 17 18 19 20 21 54 55 56
    semanticTags <node> (80)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
        on right: 14 15
    textTags <node> (81)
        on left: 38 39
        on right: 22 23 24 25 26 27 28 29 30 31 38 40 41 42 43 44
    textTag <node> (82)
        on left: 40 41 42 43 44 45 46 47 48 49 50
        on right: 38 39
    pretag (83)
        on left: 51
        on right: 31 44
    list <node> (84)
        on left: 52 53
        on right: 32 45
    listElements <node> (85)
        on left: 54 55
        on right: 52 53 54
    anchor <node> (86)
        on left: 56
        on right: 33 46
    image <node> (87)
        on left: 57 58
        on right: 34 47 57
    imageAttributes <node> (88)
        on left: 59 60
        on right: 57


State 0

    0 $accept: • start $end

    HTML_BEGIN  shift, and go to state 1
    TEXT        shift, and go to state 2

    start     go to state 3
    preabmle  go to state 4
    html      go to state 5


State 1

    4 html: HTML_BEGIN • head HTML_END

    HEAD_BEGIN  shift, and go to state 6

    head  go to state 7


State 2

    3 preabmle: TEXT •

    $default  reduce using rule 3 (preabmle)


State 3

    0 $accept: start • $end

    $end  shift, and go to state 8


State 4

    1 start: preabmle • start

    HTML_BEGIN  shift, and go to state 1
    TEXT        shift, and go to state 2

    start     go to state 9
    preabmle  go to state 4
    html      go to state 5


State 5

    2 start: html •

    $default  reduce using rule 2 (start)


State 6

    5 head: HEAD_BEGIN • title HEAD_END body

    TITLE_BEGIN  shift, and go to state 10

    title  go to state 11


State 7

    4 html: HTML_BEGIN head • HTML_END

    HTML_END  shift, and go to state 12


State 8

    0 $accept: start $end •

    $default  accept


State 9

    1 start: preabmle start •

    $default  reduce using rule 1 (start)


State 10

    6 title: TITLE_BEGIN • titleContent TITLE_END

    $default  reduce using rule 9 (textContent)

    titleContent  go to state 13
    textContent   go to state 14


State 11

    5 head: HEAD_BEGIN title • HEAD_END body

    HEAD_END  shift, and go to state 15


State 12

    4 html: HTML_BEGIN head HTML_END •

    $default  reduce using rule 4 (html)


State 13

    6 title: TITLE_BEGIN titleContent • TITLE_END

    TITLE_END  shift, and go to state 16


State 14

    7 titleContent: textContent •
   10 textContent: textContent • text

    TEXT     shift, and go to state 17
    SPACE    shift, and go to state 18
    NEWLINE  shift, and go to state 19

    $default  reduce using rule 7 (titleContent)

    text  go to state 20


State 15

    5 head: HEAD_BEGIN title HEAD_END • body

    BODY_BEGIN  shift, and go to state 21

    body  go to state 22


State 16

    6 title: TITLE_BEGIN titleContent TITLE_END •

    $default  reduce using rule 6 (title)


State 17

   11 text: TEXT •

    $default  reduce using rule 11 (text)


State 18

   12 text: SPACE •

    $default  reduce using rule 12 (text)


State 19

   13 text: NEWLINE •

    $default  reduce using rule 13 (text)


State 20

   10 textContent: textContent text •

    $default  reduce using rule 10 (textContent)


State 21

    8 body: BODY_BEGIN • bodyContent BODY_END

    NAV_BEGIN         shift, and go to state 23
    UL_BEGIN          shift, and go to state 24
    HEADER_BEGIN      shift, and go to state 25
    H1_BEGIN          shift, and go to state 26
    H2_BEGIN          shift, and go to state 27
    H3_BEGIN          shift, and go to state 28
    H4_BEGIN          shift, and go to state 29
    H5_BEGIN          shift, and go to state 30
    PARA_BEGIN        shift, and go to state 31
    SECTION_BEGIN     shift, and go to state 32
    ARTICLE_BEGIN     shift, and go to state 33
    ASIDE_BEGIN       shift, and go to state 34
    FOOTER_BEGIN      shift, and go to state 35
    A_BEGIN           shift, and go to state 36
    STRONG_BEGIN      shift, and go to state 37
    EM_BEGIN          shift, and go to state 38
    BLOCKQUOTE_BEGIN  shift, and go to state 39
    PRE_BEGIN         shift, and go to state 40
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 42
    SPACE             shift, and go to state 43
    NEWLINE           shift, and go to state 44
    IMG_BEGIN         shift, and go to state 45

    bodyContent   go to state 46
    semanticTags  go to state 47
    list          go to state 48


State 22

    5 head: HEAD_BEGIN title HEAD_END body •

    $default  reduce using rule 5 (head)


State 23

   17 semanticTags: NAV_BEGIN • bodyContent NAV_END

    NAV_BEGIN         shift, and go to state 23
    UL_BEGIN          shift, and go to state 24
    HEADER_BEGIN      shift, and go to state 25
    H1_BEGIN          shift, and go to state 26
    H2_BEGIN          shift, and go to state 27
    H3_BEGIN          shift, and go to state 28
    H4_BEGIN          shift, and go to state 29
    H5_BEGIN          shift, and go to state 30
    PARA_BEGIN        shift, and go to state 31
    SECTION_BEGIN     shift, and go to state 32
    ARTICLE_BEGIN     shift, and go to state 33
    ASIDE_BEGIN       shift, and go to state 34
    FOOTER_BEGIN      shift, and go to state 35
    A_BEGIN           shift, and go to state 36
    STRONG_BEGIN      shift, and go to state 37
    EM_BEGIN          shift, and go to state 38
    BLOCKQUOTE_BEGIN  shift, and go to state 39
    PRE_BEGIN         shift, and go to state 40
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 42
    SPACE             shift, and go to state 43
    NEWLINE           shift, and go to state 44
    IMG_BEGIN         shift, and go to state 45

    bodyContent   go to state 49
    semanticTags  go to state 47
    list          go to state 48


State 24

   53 list: UL_BEGIN • listElements UL_END

    LI_BEGIN  shift, and go to state 50

    listElements  go to state 51


State 25

   16 semanticTags: HEADER_BEGIN • bodyContent HEADER_END

    NAV_BEGIN         shift, and go to state 23
    UL_BEGIN          shift, and go to state 24
    HEADER_BEGIN      shift, and go to state 25
    H1_BEGIN          shift, and go to state 26
    H2_BEGIN          shift, and go to state 27
    H3_BEGIN          shift, and go to state 28
    H4_BEGIN          shift, and go to state 29
    H5_BEGIN          shift, and go to state 30
    PARA_BEGIN        shift, and go to state 31
    SECTION_BEGIN     shift, and go to state 32
    ARTICLE_BEGIN     shift, and go to state 33
    ASIDE_BEGIN       shift, and go to state 34
    FOOTER_BEGIN      shift, and go to state 35
    A_BEGIN           shift, and go to state 36
    STRONG_BEGIN      shift, and go to state 37
    EM_BEGIN          shift, and go to state 38
    BLOCKQUOTE_BEGIN  shift, and go to state 39
    PRE_BEGIN         shift, and go to state 40
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 42
    SPACE             shift, and go to state 43
    NEWLINE           shift, and go to state 44
    IMG_BEGIN         shift, and go to state 45

    bodyContent   go to state 52
    semanticTags  go to state 47
    list          go to state 48


State 26

   22 semanticTags: H1_BEGIN • textTags H1_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 63
    textTag   go to state 64
    list      go to state 65


State 27

   23 semanticTags: H2_BEGIN • textTags H2_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 66
    textTag   go to state 64
    list      go to state 65


State 28

   24 semanticTags: H3_BEGIN • textTags H3_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 67
    textTag   go to state 64
    list      go to state 65


State 29

   25 semanticTags: H4_BEGIN • textTags H4_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 68
    textTag   go to state 64
    list      go to state 65


State 30

   26 semanticTags: H5_BEGIN • textTags H5_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 69
    textTag   go to state 64
    list      go to state 65


State 31

   27 semanticTags: PARA_BEGIN • textTags PARA_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 70
    textTag   go to state 64
    list      go to state 65


State 32

   18 semanticTags: SECTION_BEGIN • bodyContent SECTION_END

    NAV_BEGIN         shift, and go to state 23
    UL_BEGIN          shift, and go to state 24
    HEADER_BEGIN      shift, and go to state 25
    H1_BEGIN          shift, and go to state 26
    H2_BEGIN          shift, and go to state 27
    H3_BEGIN          shift, and go to state 28
    H4_BEGIN          shift, and go to state 29
    H5_BEGIN          shift, and go to state 30
    PARA_BEGIN        shift, and go to state 31
    SECTION_BEGIN     shift, and go to state 32
    ARTICLE_BEGIN     shift, and go to state 33
    ASIDE_BEGIN       shift, and go to state 34
    FOOTER_BEGIN      shift, and go to state 35
    A_BEGIN           shift, and go to state 36
    STRONG_BEGIN      shift, and go to state 37
    EM_BEGIN          shift, and go to state 38
    BLOCKQUOTE_BEGIN  shift, and go to state 39
    PRE_BEGIN         shift, and go to state 40
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 42
    SPACE             shift, and go to state 43
    NEWLINE           shift, and go to state 44
    IMG_BEGIN         shift, and go to state 45

    bodyContent   go to state 71
    semanticTags  go to state 47
    list          go to state 48


State 33

   19 semanticTags: ARTICLE_BEGIN • bodyContent ARTICLE_END

    NAV_BEGIN         shift, and go to state 23
    UL_BEGIN          shift, and go to state 24
    HEADER_BEGIN      shift, and go to state 25
    H1_BEGIN          shift, and go to state 26
    H2_BEGIN          shift, and go to state 27
    H3_BEGIN          shift, and go to state 28
    H4_BEGIN          shift, and go to state 29
    H5_BEGIN          shift, and go to state 30
    PARA_BEGIN        shift, and go to state 31
    SECTION_BEGIN     shift, and go to state 32
    ARTICLE_BEGIN     shift, and go to state 33
    ASIDE_BEGIN       shift, and go to state 34
    FOOTER_BEGIN      shift, and go to state 35
    A_BEGIN           shift, and go to state 36
    STRONG_BEGIN      shift, and go to state 37
    EM_BEGIN          shift, and go to state 38
    BLOCKQUOTE_BEGIN  shift, and go to state 39
    PRE_BEGIN         shift, and go to state 40
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 42
    SPACE             shift, and go to state 43
    NEWLINE           shift, and go to state 44
    IMG_BEGIN         shift, and go to state 45

    bodyContent   go to state 72
    semanticTags  go to state 47
    list          go to state 48


State 34

   20 semanticTags: ASIDE_BEGIN • bodyContent ASIDE_END

    NAV_BEGIN         shift, and go to state 23
    UL_BEGIN          shift, and go to state 24
    HEADER_BEGIN      shift, and go to state 25
    H1_BEGIN          shift, and go to state 26
    H2_BEGIN          shift, and go to state 27
    H3_BEGIN          shift, and go to state 28
    H4_BEGIN          shift, and go to state 29
    H5_BEGIN          shift, and go to state 30
    PARA_BEGIN        shift, and go to state 31
    SECTION_BEGIN     shift, and go to state 32
    ARTICLE_BEGIN     shift, and go to state 33
    ASIDE_BEGIN       shift, and go to state 34
    FOOTER_BEGIN      shift, and go to state 35
    A_BEGIN           shift, and go to state 36
    STRONG_BEGIN      shift, and go to state 37
    EM_BEGIN          shift, and go to state 38
    BLOCKQUOTE_BEGIN  shift, and go to state 39
    PRE_BEGIN         shift, and go to state 40
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 42
    SPACE             shift, and go to state 43
    NEWLINE           shift, and go to state 44
    IMG_BEGIN         shift, and go to state 45

    bodyContent   go to state 73
    semanticTags  go to state 47
    list          go to state 48


State 35

   21 semanticTags: FOOTER_BEGIN • bodyContent FOOTER_END

    NAV_BEGIN         shift, and go to state 23
    UL_BEGIN          shift, and go to state 24
    HEADER_BEGIN      shift, and go to state 25
    H1_BEGIN          shift, and go to state 26
    H2_BEGIN          shift, and go to state 27
    H3_BEGIN          shift, and go to state 28
    H4_BEGIN          shift, and go to state 29
    H5_BEGIN          shift, and go to state 30
    PARA_BEGIN        shift, and go to state 31
    SECTION_BEGIN     shift, and go to state 32
    ARTICLE_BEGIN     shift, and go to state 33
    ASIDE_BEGIN       shift, and go to state 34
    FOOTER_BEGIN      shift, and go to state 35
    A_BEGIN           shift, and go to state 36
    STRONG_BEGIN      shift, and go to state 37
    EM_BEGIN          shift, and go to state 38
    BLOCKQUOTE_BEGIN  shift, and go to state 39
    PRE_BEGIN         shift, and go to state 40
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 42
    SPACE             shift, and go to state 43
    NEWLINE           shift, and go to state 44
    IMG_BEGIN         shift, and go to state 45

    bodyContent   go to state 74
    semanticTags  go to state 47
    list          go to state 48


State 36

   33 semanticTags: A_BEGIN • anchor A_END

    HREF  shift, and go to state 75

    anchor  go to state 76


State 37

   28 semanticTags: STRONG_BEGIN • textTags STRONG_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 77
    textTag   go to state 64
    list      go to state 65


State 38

   29 semanticTags: EM_BEGIN • textTags EM_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 78
    textTag   go to state 64
    list      go to state 65


State 39

   30 semanticTags: BLOCKQUOTE_BEGIN • textTags BLOCKQUOTE_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 79
    textTag   go to state 64
    list      go to state 65


State 40

   31 semanticTags: PRE_BEGIN • pretag textTags PRE_END

    $default  reduce using rule 51 (pretag)

    pretag  go to state 80


State 41

   52 list: OL_BEGIN • listElements OL_END

    LI_BEGIN  shift, and go to state 50

    listElements  go to state 81


State 42

   35 semanticTags: TEXT •

    $default  reduce using rule 35 (semanticTags)


State 43

   36 semanticTags: SPACE •

    $default  reduce using rule 36 (semanticTags)


State 44

   37 semanticTags: NEWLINE •

    $default  reduce using rule 37 (semanticTags)


State 45

   34 semanticTags: IMG_BEGIN • image RANGBRACKET

    SRC  shift, and go to state 82
    ALT  shift, and go to state 83

    $default  reduce using rule 58 (image)

    image            go to state 84
    imageAttributes  go to state 85


State 46

    8 body: BODY_BEGIN bodyContent • BODY_END

    BODY_END  shift, and go to state 86


State 47

   14 bodyContent: semanticTags • bodyContent
   15            | semanticTags •

    NAV_BEGIN         shift, and go to state 23
    UL_BEGIN          shift, and go to state 24
    HEADER_BEGIN      shift, and go to state 25
    H1_BEGIN          shift, and go to state 26
    H2_BEGIN          shift, and go to state 27
    H3_BEGIN          shift, and go to state 28
    H4_BEGIN          shift, and go to state 29
    H5_BEGIN          shift, and go to state 30
    PARA_BEGIN        shift, and go to state 31
    SECTION_BEGIN     shift, and go to state 32
    ARTICLE_BEGIN     shift, and go to state 33
    ASIDE_BEGIN       shift, and go to state 34
    FOOTER_BEGIN      shift, and go to state 35
    A_BEGIN           shift, and go to state 36
    STRONG_BEGIN      shift, and go to state 37
    EM_BEGIN          shift, and go to state 38
    BLOCKQUOTE_BEGIN  shift, and go to state 39
    PRE_BEGIN         shift, and go to state 40
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 42
    SPACE             shift, and go to state 43
    NEWLINE           shift, and go to state 44
    IMG_BEGIN         shift, and go to state 45

    $default  reduce using rule 15 (bodyContent)

    bodyContent   go to state 87
    semanticTags  go to state 47
    list          go to state 48


State 48

   32 semanticTags: list •

    $default  reduce using rule 32 (semanticTags)


State 49

   17 semanticTags: NAV_BEGIN bodyContent • NAV_END

    NAV_END  shift, and go to state 88


State 50

   55 listElements: LI_BEGIN • bodyContent LI_END

    NAV_BEGIN         shift, and go to state 23
    UL_BEGIN          shift, and go to state 24
    HEADER_BEGIN      shift, and go to state 25
    H1_BEGIN          shift, and go to state 26
    H2_BEGIN          shift, and go to state 27
    H3_BEGIN          shift, and go to state 28
    H4_BEGIN          shift, and go to state 29
    H5_BEGIN          shift, and go to state 30
    PARA_BEGIN        shift, and go to state 31
    SECTION_BEGIN     shift, and go to state 32
    ARTICLE_BEGIN     shift, and go to state 33
    ASIDE_BEGIN       shift, and go to state 34
    FOOTER_BEGIN      shift, and go to state 35
    A_BEGIN           shift, and go to state 36
    STRONG_BEGIN      shift, and go to state 37
    EM_BEGIN          shift, and go to state 38
    BLOCKQUOTE_BEGIN  shift, and go to state 39
    PRE_BEGIN         shift, and go to state 40
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 42
    SPACE             shift, and go to state 43
    NEWLINE           shift, and go to state 44
    IMG_BEGIN         shift, and go to state 45

    bodyContent   go to state 89
    semanticTags  go to state 47
    list          go to state 48


State 51

   53 list: UL_BEGIN listElements • UL_END
   54 listElements: listElements • LI_BEGIN bodyContent LI_END

    UL_END    shift, and go to state 90
    LI_BEGIN  shift, and go to state 91


State 52

   16 semanticTags: HEADER_BEGIN bodyContent • HEADER_END

    HEADER_END  shift, and go to state 92


State 53

   40 textTag: PARA_BEGIN • textTags PARA_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 93
    textTag   go to state 64
    list      go to state 65


State 54

   46 textTag: A_BEGIN • anchor A_END

    HREF  shift, and go to state 75

    anchor  go to state 94


State 55

   41 textTag: STRONG_BEGIN • textTags STRONG_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 95
    textTag   go to state 64
    list      go to state 65


State 56

   42 textTag: EM_BEGIN • textTags EM_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 96
    textTag   go to state 64
    list      go to state 65


State 57

   43 textTag: BLOCKQUOTE_BEGIN • textTags BLOCKQUOTE_END

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    textTags  go to state 97
    textTag   go to state 64
    list      go to state 65


State 58

   44 textTag: PRE_BEGIN • pretag textTags PRE_END

    $default  reduce using rule 51 (pretag)

    pretag  go to state 98


State 59

   48 textTag: TEXT •

    $default  reduce using rule 48 (textTag)


State 60

   49 textTag: SPACE •

    $default  reduce using rule 49 (textTag)


State 61

   50 textTag: NEWLINE •

    $default  reduce using rule 50 (textTag)


State 62

   47 textTag: IMG_BEGIN • image RANGBRACKET

    SRC  shift, and go to state 82
    ALT  shift, and go to state 83

    $default  reduce using rule 58 (image)

    image            go to state 99
    imageAttributes  go to state 85


State 63

   22 semanticTags: H1_BEGIN textTags • H1_END

    H1_END  shift, and go to state 100


State 64

   38 textTags: textTag • textTags
   39         | textTag •

    UL_BEGIN          shift, and go to state 24
    PARA_BEGIN        shift, and go to state 53
    A_BEGIN           shift, and go to state 54
    STRONG_BEGIN      shift, and go to state 55
    EM_BEGIN          shift, and go to state 56
    BLOCKQUOTE_BEGIN  shift, and go to state 57
    PRE_BEGIN         shift, and go to state 58
    OL_BEGIN          shift, and go to state 41
    TEXT              shift, and go to state 59
    SPACE             shift, and go to state 60
    NEWLINE           shift, and go to state 61
    IMG_BEGIN         shift, and go to state 62

    $default  reduce using rule 39 (textTags)

    textTags  go to state 101
    textTag   go to state 64
    list      go to state 65


State 65

   45 textTag: list •

    $default  reduce using rule 45 (textTag)


State 66

   23 semanticTags: H2_BEGIN textTags • H2_END

    H2_END  shift, and go to state 102


State 67

   24 semanticTags: H3_BEGIN textTags • H3_END

    H3_END  shift, and go to state 103


State 68

   25 semanticTags: H4_BEGIN textTags • H4_END

    H4_END  shift, and go to state 104


State 69

   26 semanticTags: H5_BEGIN textTags • H5_END

    H5_END  shift, and go to state 105


State 70

   27 semanticTags: PARA_BEGIN textTags • PARA_END

    PARA_END  shift, and go to state 106


State 71

   18 semanticTags: SECTION_BEGIN bodyContent • SECTION_END
